WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225301
REGRESSION (
r260360
): animation-wide timing function does not apply to 2-keyframe transform Web Animation
https://bugs.webkit.org/show_bug.cgi?id=225301
Summary
REGRESSION (r260360): animation-wide timing function does not apply to 2-keyf...
Antoine Quint
Reported
2021-05-03 06:34:21 PDT
The example
https://cldup.com/3gYZzqJk0K.html
regressed in
r260360
, it uses an animation-wide timing function with a y value outside of the [0-1] range.
Attachments
Patch
(32.68 KB, patch)
2021-05-04 07:03 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Patch for landing
(33.65 KB, patch)
2021-05-04 09:27 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2021-05-03 06:34:57 PDT
This is a specific case of
bug 215918
that we should be able to address.
Radar WebKit Bug Importer
Comment 2
2021-05-03 06:35:18 PDT
<
rdar://problem/77452933
>
Antoine Quint
Comment 3
2021-05-04 07:03:49 PDT
Created
attachment 427661
[details]
Patch
Antoine Quint
Comment 4
2021-05-04 09:27:11 PDT
Created
attachment 427677
[details]
Patch for landing
EWS
Comment 5
2021-05-04 10:14:54 PDT
Committed
r276966
(
237296@main
): <
https://commits.webkit.org/237296@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 427677
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug